--- a/LS.Training/Pokemon.Process/Pokemon.Process.csproj
+++ b/LS.Training/Pokemon.Process/Pokemon.Process.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.8" />
+    </ItemGroup>
+
 </Project>
