--- a/LS.Training/Pokemon.Services/Pokemon.Services.csproj
+++ b/LS.Training/Pokemon.Services/Pokemon.Services.csproj
@@ -1,18 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Amazon.Lambda.RuntimeSupport" Version="1.8.8" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Pokemon.Services\Pokemon.Services.csproj" />
+      <Folder Include="Models" />
     </ItemGroup>
 
 </Project>
